5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1709_3069.log
== TEST (2019-05-02 11:08:11) 
-- CODE:
x = input("nome do ataque da banshee:").upper()
y = int(input("insira o numero do dado 1:"))
z = int(input("insira o  numero do dado 2:"))

if( y >= 1 and z <= 8):
	if(x == "FURIA" and ):
		print(10 + z + y)
	elif(x == "GRITO"):
		print(6 + z + y)
	elif(x == "TOQUE"):
		a = sqrt(y + z)
		print(a)
-- ERROR:
File "XXXX", line 6
    if(x == "FURIA" and ):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:08:23) 
-- CODE:
x = input("nome do ataque da banshee:").upper()
y = int(input("insira o numero do dado 1:"))
z = int(input("insira o  numero do dado 2:"))

if( y >= 1 and z <= 8):
	if(x == "FURIA"):
		print(10 + z + y)
	elif(x == "GRITO"):
		print(6 + z + y)
	elif(x == "TOQUE"):
		a = sqrt(y + z)
		print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    a = sqrt(y + z)
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:09:37) 
-- CODE:
x = input("nome do ataque da banshee:").upper()
y = int(input("insira o numero do dado 1:"))
z = int(input("insira o  numero do dado 2:"))

if( y >= 1 and z <= 8):
	if(x == "FURIA"):
		print(10 + z + y)
	elif(x == "GRITO"):
		print(6 + z + y)
	elif(x == "TOQUE"):
		a = (y + z)**0.5
		print(a)
-- OUTPUT:
3.1622776601683795
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:10:02) 
-- CODE:
x = input("nome do ataque da banshee:").upper()
y = int(input("insira o numero do dado 1:"))
z = int(input("insira o  numero do dado 2:"))

if( y >= 1 and z <= 8):
	if(x == "FURIA"):
		print(10 + z + y)
	elif(x == "GRITO"):
		print(6 + z + y)
	elif(x == "TOQUE"):
		a = (y + z)**2
		print(a)
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:11:07) 
-- CODE:
x = input("nome do ataque da banshee:").upper()
y = int(input("insira o numero do dado 1:"))
z = int(input("insira o  numero do dado 2:"))

if( y >= 1 and z <= 8):
	if(x == "FURIA"):
		print(10 + z + y)
	elif(x == "GRITO"):
		print(6 + z + y)
	elif(x == "TOQUE"):
		a = (y + z)**2
		print(a)
else:
	print("Entrada invalida")
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:11:32) 
-- CODE:
x = input("nome do ataque da banshee:").upper()
y = int(input("insira o numero do dado 1:"))
z = int(input("insira o  numero do dado 2:"))

if( y >= 1 and z <= 8):
	if(x == "FURIA"):
		print(10 + z + y)
	elif(x == "GRITO"):
		print(6 + z + y)
	elif(x == "TOQUE"):
		a = (y + z)**2
		print(a)
else:
	print("Entrada invalida")
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:11:52) 
-- CODE:
x = input("nome do ataque da banshee:").upper()
y = int(input("insira o numero do dado 1:"))
z = int(input("insira o  numero do dado 2:"))

if( y >= 1 and z <= 8):
	if(x == "FURIA"):
		print(10 + z + y)
	elif(x == "GRITO"):
		print(6 + z + y)
	elif(x == "TOQUE"):
		a = (y + z)**2
		print(a)
else:
	print("Entrada invalida")
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:12:08) 
-- CODE:
x = input("nome do ataque da banshee:").upper()
y = int(input("insira o numero do dado 1:"))
z = int(input("insira o  numero do dado 2:"))

if( y >= 1 and z <= 8):
	if(x == "FURIA"):
		print(10 + z + y)
	elif(x == "GRITO"):
		print(6 + z + y)
	elif(x == "TOQUE"):
		a = (y + z)**2
		print(a)
else:
	print("Entrada invalida")
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:12:24) 
-- CODE:
x = input("nome do ataque da banshee:").upper()
y = int(input("insira o numero do dado 1:"))
z = int(input("insira o  numero do dado 2:"))

if( y >= 1 and z <= 8):
	if(x == "FURIA"):
		print(10 + z + y)
	elif(x == "GRITO"):
		print(6 + z + y)
	elif(x == "TOQUE"):
		a = (y + z)**2
		print(a)
else:
	print("Entrada invalida")
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:14:36) 
-- CODE:
x = input("nome do ataque da banshee:").upper()
y = int(input("insira o numero do dado 1:"))
z = int(input("insira o  numero do dado 2:"))

if( y >= 1 and z <= 8 and x == "FURIA"):
	print(10 + z + y)
elif(y >=1 and y <=8 and x == "GRITO"):
	print(6 + z + y)
elif(y >= 1 and y <= 8 and x == "TOQUE"):
	a = (y + z)**2
	print(a)
else:
	print("Entrada invalida")
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:14:52) 
-- CODE:
x = input("nome do ataque da banshee:").upper()
y = int(input("insira o numero do dado 1:"))
z = int(input("insira o  numero do dado 2:"))

if( y >= 1 and z <= 8 and x == "FURIA"):
	print(10 + z + y)
elif(y >=1 and y <=8 and x == "GRITO"):
	print(6 + z + y)
elif(y >= 1 and y <= 8 and x == "TOQUE"):
	a = (y + z)**2
	print(a)
else:
	print("Entrada invalida")
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:15:03) 
-- CODE:
x = input("nome do ataque da banshee:").upper()
y = int(input("insira o numero do dado 1:"))
z = int(input("insira o  numero do dado 2:"))

if( y >= 1 and z <= 8 and x == "FURIA"):
	print(10 + z + y)
elif(y >=1 and y <=8 and x == "GRITO"):
	print(6 + z + y)
elif(y >= 1 and y <= 8 and x == "TOQUE"):
	a = (y + z)**2
	print(a)
else:
	print("Entrada invalida")
-- OUTPUT:
100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:15:06) 
-- CODE:
x = input("nome do ataque da banshee:").upper()
y = int(input("insira o numero do dado 1:"))
z = int(input("insira o  numero do dado 2:"))

if( y >= 1 and z <= 8 and x == "FURIA"):
	print(10 + z + y)
elif(y >=1 and y <=8 and x == "GRITO"):
	print(6 + z + y)
elif(y >= 1 and y <= 8 and x == "TOQUE"):
	a = (y + z)**2
	print(a)
else:
	print("Entrada invalida")
-- EXECUTION TIME:
0.145326
-- TEST CASE 1:
---- input:
TOQUE
5
5
---- correct output:
100
---- user output:
100
-- TEST CASE 2:
---- input:
GRITA
6
1
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
GRITO
6
1
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
